// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionsMenu renders when authors page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/literature"
    >
      Literature
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white active"
      to="/authors"
    >
      Authors
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/jobs"
    >
      Jobs
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/conferences"
    >
      Conferences
    </Link>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when conferences page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/literature"
    >
      Literature
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/authors"
    >
      Authors
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/jobs"
    >
      Jobs
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white active"
      to="/conferences"
    >
      Conferences
    </Link>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when home page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/literature"
    >
      Literature
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/authors"
    >
      Authors
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/jobs"
    >
      Jobs
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/conferences"
    >
      Conferences
    </Link>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when jobs page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/literature"
    >
      Literature
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/authors"
    >
      Authors
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white active"
      to="/jobs"
    >
      Jobs
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/conferences"
    >
      Conferences
    </Link>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when literature page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white active"
      to="/literature"
    >
      Literature
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/authors"
    >
      Authors
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/jobs"
    >
      Jobs
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/conferences"
    >
      Conferences
    </Link>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when submissions page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/literature"
    >
      Literature
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/authors"
    >
      Authors
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/jobs"
    >
      Jobs
    </Link>
  </Col>
  <Col>
    <Link
      className="collection-link mh4 sm-mh2 f5 white"
      to="/conferences"
    >
      Conferences
    </Link>
  </Col>
</Row>
`;
